fix: <Toast /> mobile alignment

--- a/src/features/toasts/Toast.module.scss
+++ b/src/features/toasts/Toast.module.scss
@@ -3,7 +3,6 @@
   align-items: center;
   gap: var(--padding-md);
   width: fit-content;
-  margin-left: auto;
   margin-bottom: var(--padding-md);
   padding: var(--padding-lg);
   pointer-events: all;
